--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ async-lru==2.0.4
 attrs==24.1.0
 Babel==2.15.0
 beautifulsoup4==4.12.3
+bitsandbytes==0.43.3
 bleach==6.1.0
 certifi==2024.7.4
 cffi==1.16.0
@@ -29,6 +30,7 @@ fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.5.0
 h11==0.14.0
+hf_transfer==0.1.8
 httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.24.5
@@ -88,10 +90,12 @@ packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+peft==0.12.0
 pexpect==4.9.0
 platformdirs==4.2.2
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
+protobuf==3.20.3
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -115,6 +119,7 @@ rich==13.7.1
 rpds-py==0.19.1
 safetensors==0.4.3
 Send2Trash==1.8.3
+sentencepiece==0.2.0
 shtab==1.7.1
 six==1.16.0
 sniffio==1.3.1
@@ -130,11 +135,12 @@ tqdm==4.66.5
 traitlets==5.14.3
 transformers==4.43.3
 triton==3.0.0
-trl==0.9.6
+trl==0.8.6
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
 tyro==0.8.5
 tzdata==2024.1
+unsloth @ git+https://github.com/unslothai/unsloth.git@8001d30a8f7c179ff7036eaa2a7552ce620176b6
 uri-template==1.3.0
 urllib3==2.2.2
 wcwidth==0.2.13
@@ -142,5 +148,6 @@ webcolors==24.6.0
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.11
+xformers==0.0.26.post1
 xxhash==3.4.1
 yarl==1.9.4
