--- a/summer_2025/llm-rag-chat/package.json
+++ b/summer_2025/llm-rag-chat/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "chat-gpt-clone",
+  "name": "llm-rag-chat",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dqbd/tiktoken": "^1.0.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.104",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "axios": "^1.7.3",
     "chromadb": "^1.9.2",
-    "chromadb-default-embed": "^2.13.2",
-    "http-proxy-middleware": "^3.0.0",
-    "openai": "^4.67.3",
-    "react-scripts": "^5.0.1",
-    "react-spinners": "^0.14.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "cohere-ai": "^7.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "5.0.1",
+    "typeorm": "^0.3.20",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.6.0",
+    "workbox-broadcast-update": "^6.6.0",
+    "workbox-cacheable-response": "^6.6.0",
+    "workbox-core": "^6.6.0",
+    "workbox-expiration": "^6.6.0",
+    "workbox-google-analytics": "^6.6.1",
+    "workbox-navigation-preload": "^6.6.0",
+    "workbox-precaching": "^6.6.0",
+    "workbox-range-requests": "^6.6.0",
+    "workbox-routing": "^6.6.0",
+    "workbox-strategies": "^6.6.0",
+    "workbox-streams": "^6.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,10 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.25.7",
-    "@types/express": "^4.17.21",
-    "@types/http-proxy-middleware": "^0.19.3"
   }
 }
