--- a/summer_2025/llm-rag-chat/package.json
+++ b/summer_2025/llm-rag-chat/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.1.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "chromadb": "^1.9.2",
+    "@xenova/transformers": "^2.17.2",
+    "chromadb": "^1.7.3",
+    "chromadb-default-embed": "^2.14.0",
+    "openai": "^4.104.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -47,5 +51,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@craco/craco": "^7.1.0"
+  },
+  "optionalDependencies": {
+    "cohere-ai": "^7.17.1"
   }
 }
