--- a/summer_2025/requirements.txt
+++ b/summer_2025/requirements.txt
@@ -1,205 +1,44 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-appnope==0.1.4
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-bleach==6.2.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.6.15
-cffi==1.17.1
-charset-normalizer==3.4.2
-chromadb==1.0.13
-click==8.2.1
-coloredlogs==15.0.1
-comm==0.2.2
-dataclasses-json==0.6.7
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-detoxify==0.5.2
-distro==1.9.0
-durationpy==0.10
-executing==2.2.0
-fastapi==0.115.13
-fastjsonschema==2.21.1
-filelock==3.18.0
-flatbuffers==25.2.10
-fqdn==1.5.1
-frozenlist==1.7.0
-fsspec==2025.5.1
-git-filter-repo==2.47.0
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.0
-h11==0.16.0
-hf-xet==1.1.5
-httpcore==1.0.9
-httptools==0.6.4
+# Core dependencies
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-text-splitters==0.3.2
+langchain-chroma==0.1.4
+chromadb==0.4.24
+
+# LangGraph for Part 2
+langgraph==0.2.45
+langgraph-checkpoint==2.0.6
+
+# Web framework
+fastapi==0.115.4
+uvicorn[standard]==0.32.1
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.33.0
-humanfriendly==10.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-isoduration==20.11.0
-jedi==0.19.2
-Jinja2==3.1.6
-json5==0.12.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-kubernetes==33.1.0
-langchain==0.3.26
-langchain-chroma==0.2.4
-langchain-community==0.3.26
-langchain-core==0.3.66
-langchain-ollama==0.2.0
-langchain-text-splitters==0.3.8
-langgraph==0.4.8
-langgraph-checkpoint==2.1.0
-langgraph-prebuilt==0.2.2
-langgraph-sdk==0.1.70
-langsmith==0.4.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-mcp==1.9.4
-mdurl==0.1.2
-mistune==3.1.3
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.5.0
-mypy_extensions==1.1.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-notebook==7.4.3
-notebook_shim==0.2.4
+sse-starlette==2.2.1
+
+# Data processing
+pandas==2.2.3
 numpy==1.26.4
-oauthlib==3.3.1
-ollama==0.5.1
-onnxruntime==1.22.0
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-orjson==3.10.18
-ormsgpack==1.10.0
-overrides==7.7.0
-packaging==24.2
-pandas==2.3.0
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
-platformdirs==4.3.8
-posthog==5.4.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-propcache==0.3.2
-protobuf==5.29.5
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.1
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.0
-pydantic_core==2.33.2
-Pygments==2.19.2
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-python-dateutil==2.9.0.post0
+
+# Jupyter for development
+notebook==7.3.2
+ipykernel==6.29.5
+
+# Utilities
 python-dotenv==1.1.0
-python-json-logger==3.3.0
+requests==2.32.3
+pydantic==2.10.6
 python-multipart==0.0.20
-pytz==2025.2
-PyYAML==6.0.2
-pyzmq==27.0.0
-RapidFuzz==3.13.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-safetensors==0.5.3
-Send2Trash==1.8.3
-sentencepiece==0.2.0
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.41
-sse-starlette==2.3.6
-stack-data==0.6.3
-starlette==0.46.2
-sympy==1.14.0
-tavily-python==0.7.8
-tenacity==9.1.2
-terminado==0.18.1
-tiktoken==0.9.0
-tinycss2==1.4.0
-tokenizers==0.21.1
-torch==2.2.2
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.52.4
-typer==0.16.0
-types-python-dateutil==2.9.0.20250516
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.5.0
-uvicorn==0.34.3
-uvloop==0.21.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-xxhash==3.5.0
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+
+# MCP for Part 2
+fastmcp==2.9.0
+tavily-python==0.5.0
+
+# LangChain integrations
+langchain-ollama==0.2.1
+
+# Additional dependencies that may be needed
+typing-extensions>=4.0.0
+typing-inspect>=0.8.0
+marshmallow>=3.19.0
+langsmith>=0.1.0,<0.2.0
+rapidfuzz>=3.0.0
